<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@android:color/white"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/grey_background">

        <TextView
            android:id="@+id/taskName_rv"
            android:layout_width="267dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toStartOf="@+id/taskTime_rv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

        <Chronometer
            android:id="@+id/taskTime_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="sans-serif-condensed"
            android:text=""
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTime_rv"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/start_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_start"
                />

            <ImageButton
                android:id="@+id/stop_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_stop"
                />

            <ImageButton
                android:id="@+id/refresh_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_refresh"
                />

            <ImageButton
                android:id="@+id/info_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_info"
                />

            <ImageButton
                android:id="@+id/stats_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_stats"
                />
            <ImageButton
                android:id="@+id/edit_button_rv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_edit"
                />

              </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
