<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".AddTask"
    android:background="@drawable/popup_background">



    <EditText
        android:id="@+id/taskName_pu"
        android:hint="Task name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_box_background"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/description_pu"
        android:hint="Description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="start|top"
        android:background="@drawable/text_box_background"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
       >

        <Button
            android:id="@+id/cancel_button_pu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="Cancel"
            android:background="@drawable/my_button"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/submit_button_pu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/my_button"
            android:text="Submit"
            android:textColor="#FFFFFF" />

    </LinearLayout>



</LinearLayout>